--- a/smdfyp/src/main/AndroidManifest.xml
+++ b/smdfyp/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SEND_SMS">
+    </uses-permission>
+    <uses-permission android:name="android.permission.RECEIVE_SMS">
+    </uses-permission>
 
     <application
         android:allowBackup="true"
