--- a/smdfyp/src/main/AndroidManifest.xml
+++ b/smdfyp/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.SEND_SMS">
+    <uses-permission android:name="MODIFY_AUDIO_SETTINGS">
+
+
+    </uses-permission>
     </uses-permission>
     <uses-permission android:name="android.permission.RECEIVE_SMS">
     </uses-permission>
