--- a/smdfyp/server-src/src/main/AndroidManifest.xml
+++ b/smdfyp/server-src/src/main/AndroidManifest.xml
@@ -51,6 +51,12 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
         </activity>
+
+        <activity
+            android:name=".Details"
+            android:label="@string/title_activity_maps" >
+        </activity>
+
     </application>
 
 </manifest>
